src/test/ui/range/issue-93122-bind-unit-range-to-unit.rs
// run-rustfix

fn main() {
    let () = ()..; //~ ERROR: mismatched types
    let () = ..(); //~ ERROR: mismatched types
    let () = ..=(); //~ ERROR: mismatched types
    let () = ()..(); //~ ERROR: mismatched types
    let () = ()..=(); //~ ERROR: mismatched types
}
